Adding theme-color

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,14 @@ html {
   width: 100vw;
 }
 
+html,
+body,
+#__nuxt {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 * {
   scroll-behavior: smooth;
 }
